# esp-kitchen-light

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: build.yml  codeql-analysis.yml  release.yml
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_status.c  switch.c  switch.h
